rearranging folder + gitignore

--- a/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
+++ b/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
@@ -72,8 +72,8 @@
    "outputs": [],
    "source": [
     "# Main Folder\n",
-    "# srcfolder = '../goodwin_creek_files/'\n",
-    "srcfolder = '../goodwin_creek_1m/'\n",
+    "# srcfolder = '../input_data/goodwin_creek_files/'\n",
+    "srcfolder = '../input_data/goodwin_creek_1m/'\n",
     "\n",
     "# File names\n",
     "filepath_annagnps_reach_ids = srcfolder + 'AnnAGNPS_Reach_IDs.asc'\n",
@@ -1582,7 +1582,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputfolder = '../goodwin_creek_1m/cche1d/' # Location to write the files\n",
+    "outputfolder = '../input_data/goodwin_creek_1m/cche1d/' # Location to write the files\n",
     "casename = 'goodwin_creek' # Name of the case for these files"
    ]
   },
