--- a/notebooks_and_scripts/top2cche1d_notebook.ipynb
+++ b/notebooks_and_scripts/top2cche1d_notebook.ipynb
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "# Main Folder\n",
-    "srcfolder = '../topagnps_ohio_files/'\n",
+    "srcfolder = '../input_data/topagnps_ohio_files/'\n",
     "\n",
     "# File names\n",
     "filepath_annagnps_reach_ids = srcfolder + 'AnnAGNPS_Reach_IDs.asc'\n",
@@ -1735,7 +1735,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputfolder = '../topagnps_ohio_files/top2cche1d_outputs/' # Location to write the files\n",
+    "outputfolder = '../input_data/topagnps_ohio_files/top2cche1d_outputs/' # Location to write the files\n",
     "casename = 'ohio' # Name of the case for these files"
    ]
   },
