--- a/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
+++ b/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,9 @@
     "filepath_agflow = srcfolder + 'AgFlow_Reach_Data.csv'\n",
     "filepath_flovec = srcfolder + 'FLOVEC.asc'\n",
     "filepath_netw = srcfolder + 'NETW.asc'\n",
-    "filepath_dednm = srcfolder + 'RELIEF.asc'"
+    "filepath_dednm = srcfolder + 'RELIEF.asc'\n",
+    "\n",
+    "visualize = False"
    ]
   },
   {
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +419,7 @@
        "9                        103  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,12 +444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "img_strahler, geoMatrix, _, _, _, _, = t2c.read_esri_asc_file(filepath_netw)\n",
-    "fig = t2c.visualize_strahler_number(img_strahler, geoMatrix, renderer='browser')"
+    "\n",
+    "if visualize:\n",
+    "    fig = t2c.visualize_strahler_number(img_strahler, geoMatrix, renderer='browser')"
    ]
   },
   {
@@ -474,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +498,7 @@
          "marker": {
           "symbol": "circle"
          },
-         "mode": "markers+lines",
+         "mode": "lines+markers",
          "name": "",
          "orientation": "v",
          "showlegend": false,
@@ -1386,11 +1390,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "distance = 1\n",
+    "distance = 20\n",
     "min_strahler = 1\n",
     "# df_nodes, df_channel, df_link, df_reach, df_csec, df_csprf, img_reach = t2c.convert_topagnps_output_to_cche1d_input(filepath_agflow, filepath_flovec, filepath_annagnps_reach_ids, filepath_netw, default_xsection, min_strahler, distance)\n",
     "df_nodes, df_channel, df_link, df_reach, df_csec, df_csprf, img_reach, cche1d_to_annagnps_reaches = t2c.convert_topagnps_output_to_cche1d_input(filepath_agflow, filepath_annagnps_reach_ids, filepath_netw, default_xsection, min_strahler, distance)"
@@ -1407,16 +1411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = t2c.visualize_reaches_id(img_reach, geoMatrix, title='New Reach IDs', renderer='browser')"
+    "if visualize:\n",
+    "    fig = t2c.visualize_reaches_id(img_reach, geoMatrix, title='New Reach IDs', renderer='browser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1527,7 @@
        "[811 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,11 +1539,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reaches_cche1d_topagnps.to_csv('../goodwin_creek_1m/cche1d/cche1d_annagnps_reach_equivalent.csv', index=False)"
+    "reaches_cche1d_topagnps.to_csv('../input_data/goodwin_creek_1m/cche1d/cche1d_annagnps_reach_equivalent.csv', index=False)"
    ]
   },
   {
@@ -1561,11 +1566,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = t2c.visualize_cche1d_nodes(df_nodes, renderer='browser')"
+    "visualize = True\n",
+    "if visualize:\n",
+    "    fig = t2c.visualize_cche1d_nodes(df_nodes, renderer='browser')"
    ]
   },
   {
@@ -1578,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,29 +1595,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_nodes.dat successfully written\n",
-      "../goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_channel.dat successfully written\n",
-      "../goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_link.dat successfully written\n",
-      "../goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_reach.dat successfully written\n",
-      "../goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_csec.dat successfully written\n",
-      "../goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_csprf.dat successfully written\n"
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_nodes.dat successfully written\n",
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_channel.dat successfully written\n",
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_link.dat successfully written\n",
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_reach.dat successfully written\n",
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_csec.dat successfully written\n",
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_csprf.dat successfully written\n"
      ]
     }
    ],
    "source": [
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_nodes)\n",
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_channel)\n",
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_link)\n",
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_reach)\n",
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_csec)\n",
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_csprf)"
+    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_nodes)\n",
+    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_channel)\n",
+    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_link)\n",
+    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_reach)\n",
+    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_csec)\n",
+    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_csprf)"
    ]
   }
  ],
