other processings of gcew

--- a/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
+++ b/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "9                        103  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1390,12 +1390,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "distance = 20\n",
-    "min_strahler = 1\n",
+    "distance = 10\n",
+    "min_strahler = 3\n",
     "# df_nodes, df_channel, df_link, df_reach, df_csec, df_csprf, img_reach = t2c.convert_topagnps_output_to_cche1d_input(filepath_agflow, filepath_flovec, filepath_annagnps_reach_ids, filepath_netw, default_xsection, min_strahler, distance)\n",
     "df_nodes, df_channel, df_link, df_reach, df_csec, df_csprf, img_reach, cche1d_to_annagnps_reaches = t2c.convert_topagnps_output_to_cche1d_input(filepath_agflow, filepath_annagnps_reach_ids, filepath_netw, default_xsection, min_strahler, distance)"
    ]
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1452,82 +1452,271 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>597</td>\n",
-       "      <td>216</td>\n",
+       "      <td>26</td>\n",
+       "      <td>207</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>592</td>\n",
-       "      <td>221</td>\n",
+       "      <td>25</td>\n",
+       "      <td>224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>598</td>\n",
-       "      <td>215</td>\n",
+       "      <td>27</td>\n",
+       "      <td>190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>579</td>\n",
-       "      <td>234</td>\n",
+       "      <td>23</td>\n",
+       "      <td>300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>578</td>\n",
-       "      <td>235</td>\n",
+       "      <td>21</td>\n",
+       "      <td>392</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>22</td>\n",
+       "      <td>353</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>806</th>\n",
-       "      <td>2</td>\n",
-       "      <td>911</td>\n",
+       "      <th>6</th>\n",
+       "      <td>28</td>\n",
+       "      <td>181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>807</th>\n",
+       "      <th>7</th>\n",
+       "      <td>24</td>\n",
+       "      <td>269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>29</td>\n",
+       "      <td>168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>30</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>19</td>\n",
+       "      <td>436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>20</td>\n",
+       "      <td>433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>18</td>\n",
+       "      <td>469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>31</td>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>17</td>\n",
+       "      <td>521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>33</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>10</td>\n",
+       "      <td>664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>32</td>\n",
+       "      <td>115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>12</td>\n",
+       "      <td>566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>14</td>\n",
+       "      <td>546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>16</td>\n",
+       "      <td>536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>13</td>\n",
+       "      <td>565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>11</td>\n",
+       "      <td>647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>35</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>34</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>9</td>\n",
+       "      <td>678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>36</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
        "      <td>4</td>\n",
-       "      <td>909</td>\n",
+       "      <td>744</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>808</th>\n",
-       "      <td>811</td>\n",
-       "      <td>2</td>\n",
+       "      <th>29</th>\n",
+       "      <td>37</td>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>809</th>\n",
+       "      <th>30</th>\n",
        "      <td>3</td>\n",
-       "      <td>910</td>\n",
+       "      <td>755</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>810</th>\n",
+       "      <th>31</th>\n",
+       "      <td>38</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>39</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>8</td>\n",
+       "      <td>680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>5</td>\n",
+       "      <td>735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>6</td>\n",
+       "      <td>728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>7</td>\n",
+       "      <td>691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2</td>\n",
+       "      <td>830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>40</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>41</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>42</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
        "      <td>1</td>\n",
-       "      <td>912</td>\n",
+       "      <td>895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>43</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>811 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     CCHE1D_Reach  TopAGNPS_Reach\n",
-       "0             597             216\n",
-       "1             592             221\n",
-       "2             598             215\n",
-       "3             579             234\n",
-       "4             578             235\n",
-       "..            ...             ...\n",
-       "806             2             911\n",
-       "807             4             909\n",
-       "808           811               2\n",
-       "809             3             910\n",
-       "810             1             912\n",
-       "\n",
-       "[811 rows x 2 columns]"
+       "    CCHE1D_Reach  TopAGNPS_Reach\n",
+       "0             26             207\n",
+       "1             25             224\n",
+       "2             27             190\n",
+       "3             23             300\n",
+       "4             21             392\n",
+       "5             22             353\n",
+       "6             28             181\n",
+       "7             24             269\n",
+       "8             29             168\n",
+       "9             30             140\n",
+       "10            19             436\n",
+       "11            20             433\n",
+       "12            18             469\n",
+       "13            31             137\n",
+       "14            17             521\n",
+       "15            15             537\n",
+       "16            33              98\n",
+       "17            10             664\n",
+       "18            32             115\n",
+       "19            12             566\n",
+       "20            14             546\n",
+       "21            16             536\n",
+       "22            13             565\n",
+       "23            11             647\n",
+       "24            35              81\n",
+       "25            34              97\n",
+       "26             9             678\n",
+       "27            36              76\n",
+       "28             4             744\n",
+       "29            37              75\n",
+       "30             3             755\n",
+       "31            38              62\n",
+       "32            39              47\n",
+       "33             8             680\n",
+       "34             5             735\n",
+       "35             6             728\n",
+       "36             7             691\n",
+       "37             2             830\n",
+       "38            40              33\n",
+       "39            41               6\n",
+       "40            42               4\n",
+       "41             1             895\n",
+       "42            43               2"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,11 +1728,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reaches_cche1d_topagnps.to_csv('../input_data/goodwin_creek_1m/cche1d/cche1d_annagnps_reach_equivalent.csv', index=False)"
+    "reaches_cche1d_topagnps.to_csv(f'../input_data/goodwin_creek_1m/cche1d/cche1d_annagnps_reach_equivalent_min_strahler_{min_strahler}_step_{distance}m.csv', index=False)\n"
    ]
   },
   {
@@ -1566,11 +1755,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualize = True\n",
+    "visualize = False\n",
     "if visualize:\n",
     "    fig = t2c.visualize_cche1d_nodes(df_nodes, renderer='browser')"
    ]
@@ -1585,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,19 +1784,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_nodes.dat successfully written\n",
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_channel.dat successfully written\n",
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_link.dat successfully written\n",
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_reach.dat successfully written\n",
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_csec.dat successfully written\n",
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_1_step_20m_csprf.dat successfully written\n"
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_nodes.dat successfully written\n",
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_channel.dat successfully written\n",
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_link.dat successfully written\n",
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_reach.dat successfully written\n",
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_csec.dat successfully written\n",
+      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_csprf.dat successfully written\n"
      ]
     }
    ],
@@ -1619,6 +1808,13 @@
     "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_csec)\n",
     "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_csprf)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
