--- a/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
+++ b/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
@@ -1736,6 +1736,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assemble cell, reach, outflow node file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
