--- a/notebooks_and_scripts/top2cche1d_notebook.ipynb
+++ b/notebooks_and_scripts/top2cche1d_notebook.ipynb
@@ -15,8 +15,6 @@
     "    - The raster file of the different reaches obtained from processing a DEM file\n",
     "- `AgFlow_Reach_Data.csv`\n",
     "    - csv file containing information about each reach, the position of the upstream and downstream row/column coordinates of each reach, the receiving reach etc.\n",
-    "- `FLOVEC.asc`\n",
-    "    - The flow direction raster file (used to determine for each junction which inflow is on the right and which one comes from the left)\n",
     "- `NETW.asc`\n",
     "    - Raster file indicating what is the Strahler number of each pixel of each reach\n",
     "\n",
@@ -77,7 +75,7 @@
     "# File names\n",
     "filepath_annagnps_reach_ids = srcfolder + 'AnnAGNPS_Reach_IDs.asc'\n",
     "filepath_agflow = srcfolder + 'AgFlow_Reach_Data.csv'\n",
-    "filepath_flovec = srcfolder + 'FLOVEC.asc'\n",
+    "# filepath_flovec = srcfolder + 'FLOVEC.asc'\n",
     "filepath_netw = srcfolder + 'NETW.asc'\n",
     "filepath_dednm = srcfolder + 'DEDNM.asc'"
    ]
