Problem when Strahler > 1, thinking about it

--- a/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
+++ b/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
@@ -15,8 +15,6 @@
     "    - The raster file of the different reaches obtained from processing a DEM file\n",
     "- `AgFlow_Reach_Data.csv`\n",
     "    - csv file containing information about each reach, the position of the upstream and downstream row/column coordinates of each reach, the receiving reach etc.\n",
-    "- `FLOVEC.asc`\n",
-    "    - The flow direction raster file (used to determine for each junction which inflow is on the right and which one comes from the left)\n",
     "- `NETW.asc`\n",
     "    - Raster file indicating what is the Strahler number of each pixel of each reach\n",
     "\n",
@@ -67,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +81,7 @@
     "filepath_dednm = srcfolder + 'RELIEF.asc'\n",
     "\n",
     "visualize = False\n",
-    "write_files = False"
+    "write_files = True"
    ]
   },
   {
@@ -101,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +298,7 @@
        "4                         53  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1271,17 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib\n",
-    "importlib.reload(t2c);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,19 +1301,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'cche1d_to_annagnps_reaches' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m cche1d_to_annagnps_reaches\u001b[39m.\u001b[39mhead()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'cche1d_to_annagnps_reaches' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CCHE1D_Channel</th>\n",
+       "      <th>Reach_ID</th>\n",
+       "      <th>Contributing_Cell_ID_Source</th>\n",
+       "      <th>Contributing_Cell_ID_Right</th>\n",
+       "      <th>Contributing_Cell_ID_Left</th>\n",
+       "      <th>Upstream_Reach_ID_1</th>\n",
+       "      <th>Upstream_Reach_ID_2</th>\n",
+       "      <th>y_US</th>\n",
+       "      <th>x_US</th>\n",
+       "      <th>y_DS</th>\n",
+       "      <th>x_DS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>26</td>\n",
+       "      <td>207</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2072</td>\n",
+       "      <td>2073</td>\n",
+       "      <td>209</td>\n",
+       "      <td>208</td>\n",
+       "      <td>3.796087e+06</td>\n",
+       "      <td>236437.114013</td>\n",
+       "      <td>3.795927e+06</td>\n",
+       "      <td>236386.114013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25</td>\n",
+       "      <td>224</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2242</td>\n",
+       "      <td>2243</td>\n",
+       "      <td>226</td>\n",
+       "      <td>225</td>\n",
+       "      <td>3.795928e+06</td>\n",
+       "      <td>236396.114013</td>\n",
+       "      <td>3.795926e+06</td>\n",
+       "      <td>236386.114013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>27</td>\n",
+       "      <td>190</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1902</td>\n",
+       "      <td>1903</td>\n",
+       "      <td>268</td>\n",
+       "      <td>191</td>\n",
+       "      <td>3.795427e+06</td>\n",
+       "      <td>236041.114013</td>\n",
+       "      <td>3.795379e+06</td>\n",
+       "      <td>235999.114013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23</td>\n",
+       "      <td>300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3002</td>\n",
+       "      <td>3003</td>\n",
+       "      <td>432</td>\n",
+       "      <td>301</td>\n",
+       "      <td>3.795002e+06</td>\n",
+       "      <td>237260.114013</td>\n",
+       "      <td>3.794981e+06</td>\n",
+       "      <td>237186.114013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>21</td>\n",
+       "      <td>392</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3922</td>\n",
+       "      <td>3923</td>\n",
+       "      <td>394</td>\n",
+       "      <td>393</td>\n",
+       "      <td>3.795291e+06</td>\n",
+       "      <td>239039.114013</td>\n",
+       "      <td>3.795523e+06</td>\n",
+       "      <td>239046.114013</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CCHE1D_Channel  Reach_ID  Contributing_Cell_ID_Source  \\\n",
+       "0              26       207                            0   \n",
+       "1              25       224                            0   \n",
+       "2              27       190                            0   \n",
+       "3              23       300                            0   \n",
+       "4              21       392                            0   \n",
+       "\n",
+       "   Contributing_Cell_ID_Right  Contributing_Cell_ID_Left  Upstream_Reach_ID_1  \\\n",
+       "0                        2072                       2073                  209   \n",
+       "1                        2242                       2243                  226   \n",
+       "2                        1902                       1903                  268   \n",
+       "3                        3002                       3003                  432   \n",
+       "4                        3922                       3923                  394   \n",
+       "\n",
+       "   Upstream_Reach_ID_2          y_US           x_US          y_DS  \\\n",
+       "0                  208  3.796087e+06  236437.114013  3.795927e+06   \n",
+       "1                  225  3.795928e+06  236396.114013  3.795926e+06   \n",
+       "2                  191  3.795427e+06  236041.114013  3.795379e+06   \n",
+       "3                  301  3.795002e+06  237260.114013  3.794981e+06   \n",
+       "4                  393  3.795291e+06  239039.114013  3.795523e+06   \n",
+       "\n",
+       "            x_DS  \n",
+       "0  236386.114013  \n",
+       "1  236386.114013  \n",
+       "2  235999.114013  \n",
+       "3  237186.114013  \n",
+       "4  239046.114013  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1352,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1381,19 +1501,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_nodes.dat successfully written\n",
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_channel.dat successfully written\n",
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_link.dat successfully written\n",
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_reach.dat successfully written\n",
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_csec.dat successfully written\n",
-      "../input_data/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_10m_csprf.dat successfully written\n"
+      "../data_outputs/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_20m_nodes.dat successfully written\n",
+      "../data_outputs/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_20m_channel.dat successfully written\n",
+      "../data_outputs/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_20m_link.dat successfully written\n",
+      "../data_outputs/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_20m_reach.dat successfully written\n",
+      "../data_outputs/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_20m_csec.dat successfully written\n",
+      "../data_outputs/goodwin_creek_1m/cche1d/goodwin_creek_min_strahler_3_step_20m_csprf.dat successfully written\n"
      ]
     }
    ],
@@ -1409,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
