--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -2,150 +2,135 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "import topagnps2cche1d.tools as t2c"
+    "class Reach:\n",
+    "    def __init__(self, id, value) -> None:\n",
+    "        self.id = id\n",
+    "        self.value = value\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"Reach: {self.id}, Value: {self.value}\"\n",
+    "\n",
+    "class System:\n",
+    "    def __init__(self):\n",
+    "        self.reaches = {}\n",
+    "\n",
+    "    def add_reach(self, reach):\n",
+    "        self.reaches[reach.id] = reach\n",
+    "\n",
+    "    def change_value(self, reach_id, value):\n",
+    "        self.reaches[reach_id].value = value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib\n",
-    "importlib.reload(t2c);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 3), (1, 3), (2, 3), (2, 2), (3, 1)]\n"
+      "Reach: 1, Value: hello\n"
      ]
     }
    ],
    "source": [
-    "I = np.array([[0,0,0,1,0],\n",
-    "              [0,0,0,1,0],\n",
-    "              [0,0,1,1,0],\n",
-    "              [0,1,0,0,0]])\n",
-    "ordered_path = t2c.get_intermediate_nodes_img((0,3), (3,1), I)\n",
-    "\n",
-    "print(ordered_path)"
+    "reach1 = Reach(id=1, value='hello')\n",
+    "print(reach1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_reach_ids = Path('../data_inputs/goodwin_creek_1m/AnnAGNPS_Reach_IDs.ASC')\n",
-    "img, geoMatrix, ncols, nrows, nodataval, dataset = t2c.read_esri_asc_file(img_reach_ids)"
+    "s = System()\n",
+    "\n",
+    "s.add_reach(reach1)\n",
+    "s.change_value(reach_id=1, value='bye')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = [1,1,None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2, 3], 2: [4, 5]}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = {1:[2,3], 2:[4,5]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(5819, 1067), (5818, 1067), (5817, 1066), (5816, 1065), (5815, 1065), (5814, 1065), (5813, 1065), (5812, 1065), (5811, 1065), (5810, 1065), (5808, 1066), (5807, 1066), (5806, 1066), (5805, 1066), (5804, 1066), (5803, 1066), (5802, 1066), (5801, 1066), (5800, 1065), (5798, 1063), (5797, 1062), (5797, 1061), (5796, 1059), (5795, 1058), (5794, 1057)]\n"
+      "[2, 3, 4, 5]\n"
      ]
     }
    ],
    "source": [
-    "reach_906 = np.where(img == 906, 1, 0)\n",
+    "OUTPUT = []\n",
+    "for x in A.values():\n",
+    "    OUTPUT.extend(x)\n",
     "\n",
-    "usrowcol = (5819, 1067)\n",
-    "dsrowcol = (5794, 1057)\n",
-    "\n",
-    "ordered_path = t2c.get_intermediate_nodes_img(usrowcol, dsrowcol, reach_906)\n",
-    "print(ordered_path)"
+    "print(OUTPUT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "[4, 5]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = {'a':[1,5], 'b':[2,4], 'c':[3,6]}\n",
-    "\n",
-    "'a' in d"
+    "max(A.values())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_items([('a', [1, 5]), ('b', [2, 4]), ('c', [3, 6])])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d.items()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[True for ur in d.values() if 1 in ur][0]"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
